--- a/LivingDesign/View/Home.storyboard
+++ b/LivingDesign/View/Home.storyboard
@@ -8,17 +8,34 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home3-->
+        <!--Home-->
         <scene sceneID="iYJ-2m-Rlo">
             <objects>
-                <viewController storyboardIdentifier="Home3ViewControllerID" id="qv8-ee-q9t" customClass="Home3" customModule="LivingDesign" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewControllerID" id="qv8-ee-q9t" customClass="Home" customModule="LivingDesign" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xjo-Ow-9Ha">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="krB-6x-gLi">
-                                <rect key="frame" x="30" y="44" width="354" height="818"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K0o-bA-Ouj">
+                                <rect key="frame" x="267" y="40" width="50" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.55137425659999995" green="0.6991565824" blue="0.1212733015" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="追加">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRy-rv-gCG">
+                                <rect key="frame" x="25" y="64" width="364" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="yG5-4z-lfE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="krB-6x-gLi">
+                                <rect key="frame" x="30" y="94" width="354" height="768"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mxr-9s-cQp">
                                     <size key="itemSize" width="115" height="116"/>
@@ -27,20 +44,23 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="lOt-fs-0fQ" customClass="HomeItemCell" customModule="LivingDesign" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="lOt-fs-0fQ">
                                         <rect key="frame" x="0.0" y="0.0" width="115" height="116"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="RCr-IS-LFF">
                                             <rect key="frame" x="0.0" y="0.0" width="115" height="116"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jvJ-25-DnC">
-                                                    <rect key="frame" x="8.5458612975514825" y="8" width="94.999999999999929" height="75.000000000000014"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jvJ-25-DnC">
+                                                    <rect key="frame" x="-0.5" y="8" width="115" height="75.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="jvJ-25-DnC" secondAttribute="height" multiplier="38:25" id="k35-xb-YdB"/>
+                                                        <constraint firstAttribute="width" constant="115" id="rGo-RN-vy4"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qhU-Vt-rtD">
-                                                    <rect key="frame" x="8" y="83" width="94.999999999999929" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qhU-Vt-rtD">
+                                                    <rect key="frame" x="8" y="83.5" width="95" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -48,18 +68,18 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="qhU-Vt-rtD" secondAttribute="trailing" constant="10" id="ahv-Pu-b4B"/>
-                                                <constraint firstItem="qhU-Vt-rtD" firstAttribute="leading" secondItem="RCr-IS-LFF" secondAttribute="leading" constant="10" id="gET-32-2xR"/>
-                                                <constraint firstAttribute="bottom" secondItem="qhU-Vt-rtD" secondAttribute="bottom" constant="12" id="huB-aB-rGc"/>
-                                                <constraint firstItem="qhU-Vt-rtD" firstAttribute="top" secondItem="RCr-IS-LFF" secondAttribute="top" constant="83" id="ySO-ID-v1r"/>
+                                                <constraint firstItem="jvJ-25-DnC" firstAttribute="top" secondItem="RCr-IS-LFF" secondAttribute="top" constant="8" id="HKg-3C-Eg4"/>
+                                                <constraint firstItem="qhU-Vt-rtD" firstAttribute="top" secondItem="jvJ-25-DnC" secondAttribute="bottom" id="M5R-Pm-gfY"/>
+                                                <constraint firstItem="qhU-Vt-rtD" firstAttribute="leading" secondItem="RCr-IS-LFF" secondAttribute="leading" constant="8" id="ZcB-8J-EZX"/>
+                                                <constraint firstAttribute="trailing" secondItem="jvJ-25-DnC" secondAttribute="trailing" constant="0.46999999999999997" id="kNU-0d-uw4"/>
+                                                <constraint firstItem="qhU-Vt-rtD" firstAttribute="top" secondItem="jvJ-25-DnC" secondAttribute="bottom" id="sfy-lA-h6m"/>
+                                                <constraint firstItem="jvJ-25-DnC" firstAttribute="leading" secondItem="RCr-IS-LFF" secondAttribute="leading" constant="-0.46999999999999997" id="z3K-ej-mPA"/>
+                                                <constraint firstAttribute="trailing" secondItem="qhU-Vt-rtD" secondAttribute="trailing" constant="12" id="zqb-HC-WUH"/>
+                                                <constraint firstAttribute="bottom" secondItem="qhU-Vt-rtD" secondAttribute="bottom" constant="12" id="zvL-gw-6SP"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <size key="customSize" width="115" height="116"/>
-                                        <connections>
-                                            <outlet property="img" destination="jvJ-25-DnC" id="nb1-GK-e6a"/>
-                                            <outlet property="label" destination="qhU-Vt-rtD" id="bb8-Mi-Noc"/>
-                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -67,10 +87,33 @@
                                     <outlet property="delegate" destination="qv8-ee-q9t" id="oOJ-ox-l6t"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PHm-Uy-EWe">
+                                <rect key="frame" x="339" y="40" width="50" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.55137425659999995" green="0.6991565824" blue="0.1212733015" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="削除">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="dRy-rv-gCG" secondAttribute="trailing" constant="25" id="7yi-Hs-hPB"/>
+                            <constraint firstItem="krB-6x-gLi" firstAttribute="bottom" secondItem="EkR-Ua-mdL" secondAttribute="bottom" id="aqz-tO-vpU"/>
+                            <constraint firstItem="krB-6x-gLi" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" constant="30" id="c7D-tp-4Fc"/>
+                            <constraint firstItem="krB-6x-gLi" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="50" id="e9j-dq-61M"/>
+                            <constraint firstItem="dRy-rv-gCG" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" constant="25" id="ooC-sb-dDW"/>
+                            <constraint firstItem="krB-6x-gLi" firstAttribute="top" secondItem="dRy-rv-gCG" secondAttribute="bottom" id="usv-H5-cNp"/>
+                            <constraint firstItem="dRy-rv-gCG" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="20" id="ybX-UR-qP5"/>
+                            <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="krB-6x-gLi" secondAttribute="trailing" constant="30" id="zWT-Lc-Pgl"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="EkR-Ua-mdL"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="krB-6x-gLi" id="OsD-l5-qgq"/>
+                        <outlet property="titleLabel" destination="dRy-rv-gCG" id="4hJ-N0-bBd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aAc-Ve-eKa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
